release 1.1.0-ea (2009-05)
- Fixed issue 278
  https://jersey.dev.java.net/issues/show_bug.cgi?id=278
  com.sun.jersey.api.client.filter.HTTPBasicAuthFilter was not correctly
  using "=" for padding characters when base 64 encoding the basic string
  derived from the user name and password.
- Fixed issue 151
  https://jersey.dev.java.net/issues/show_bug.cgi?id=151
  Added the following to ClientResponse:
  - enum Status, containing all known HTTP status codes
  - ClientResponse.getClientResponseStatus() that returns an instance of Status
- When using the Apache HTTP client the request output stream was not closed.
  This causes issues with using say the GZIP content encoding filter that
  requires the closing (or finishing) of the GZIP output stream
- Support a base path from which root resource classes are matchd when
  using the Grizzly adapter. The base path may be set as follows:

    ResourceConfig rc = ...
    Adapter a = ContainerFactory.createContainer(Adapter.class, rc);
    (GrizzlyAdapter)adapter).setResourcesContextPath("/basePath");

  By default the base path is "/".
- Integrated JSR 311 API 1.1
  - Require support for static fromString method in addition to existing valueOf
    method for types used as parameters in resource methods. For backwards
    compatibility, where both methods exist, valueOf will take precedence except
    for Enums where the precedence is reversed since every enum defines an
    implicit valueOf method that cannot be overridden.
  - Support Request.evaluatePreconditions() which is to be called when a
    resource does not exist. If the "If-Match" header is present with
    one or more entities, or is "*" then a 412 response will be returned
    otherwise null will be returned.
    This is primarily of use for implementations of PUT.
  - Unify the the value of @Consumes and @Produces as follows:

        /**
         * A list of media types. Each entry may specify a single type or consist